[workspace]
resolver = "2"

members = [
	"srcwrdelta",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
homepage = "https://github.com/srcwr/delta"
repository = "https://github.com/srcwr/delta"

[workspace.dependencies]
extshared = { path = "../srcwrtimer/extshared" }
extshared_build_helper = { path = "../srcwrtimer/extshared_build_helper" }

[profile.release]
lto = true
incremental = false
