[workspace]
resolver = "2"

members = [
	"srcwr💾",
]

[workspace.package]
version = "2.0.3"
edition = "2024"
homepage = "https://github.com/srcwr/srcwrfloppy"
repository = "https://github.com/srcwr/srcwrfloppy"

[workspace.dependencies]
extshared = { path = "../srcwrtimer/extshared" }
extshared_build_helper = { path = "../srcwrtimer/extshared_build_helper" }

[profile.release]
lto = true
incremental = false
